tests/pos/simple/field-scope.ts
//adapted from navier-stokes octane
class FluidField {
    /*@ size : [Immutable] number */
    private size = 6;
    constructor() { }
    /*@ foo : (x: {number | v = this.size}) : void */
    foo(x) { this.foo(x) }
}
